# Embedded-Linux

AdminLinux_Day5/: script.sh
AdminLinux_Task2/: Question2.txt
AdminLinux_Task3/: README.md  script.sh
EmbeddedLinux_1/: Creating C library.md  main.c  main_d.elf  main_s.elf
EmbeddedLinux_2/Task_3/: README.md
EmbeddedLinux_2/Task_4/: Makefile  README.md
EmbeddedLinux_2/Task_4/Headers/: BIT_MATH.h  DIO.h  PORT.h  PORT_config.h  Registers.h  STD_TYPES.h  Target.h
EmbeddedLinux_2/Task_4/Sources/: DIO.c  PORT.c  PORT_config.c
EmbeddedLinux_3/: CMakeLists.txt  main.c
EmbeddedLinux_3/Include/: modulus.h
EmbeddedLinux_3/Lib/: CMakeLists.txt
EmbeddedLinux_3/Lib/Source/: division.c  modulus.c  subtraction.c
Exam1/: menu_script.sh
task1/: question13.sh
